# stalker-gamma-linux

./: .gitignore  Makefile  README.md  install.sh  pyproject.toml
.github/: upstream-state.json
.github/workflows/: ci.yml  release.yml  upstream-watch.yml
data/: stalker-gamma-linux-gui.desktop
docs/: ARCHITECTURE.md  CI.md  INSTALL-MANUAL.md  MO2-PROTON-COMPAT.md  PACKAGING.md  ROADMAP.md
packaging/appimage/: build.sh
packaging/appimage/stalker-gamma-linux/: entrypoint.sh  requirements.txt.in  stalker-gamma-linux.desktop
packaging/flatpak/: gamma-launcher.yml  org.stalkergammalinux.Gui.metainfo.xml  org.stalkergammalinux.Gui.yml  p7zip.yml  python3-requirements.json  stalker-gamma-linux.yml  umu-launcher.yml
packaging/flatpak/flathub/: README.md  collect.sh
scripts/: check_upstream_state.py  upstream_smoke_test.py
src/stalker_gamma_linux/: __init__.py  __main__.py  cli.py  doctor.py  logging_setup.py  orchestrator.py  output.py  state.py
src/stalker_gamma_linux/desktop/: __init__.py  entry.py  errors.py  install.py  paths.py  session.py
src/stalker_gamma_linux/engine/: __init__.py  errors.py  paths.py  process.py  runner.py
src/stalker_gamma_linux/environment/: __init__.py  checks.py  commands.py  distro.py  models.py  report.py  system.py
src/stalker_gamma_linux/gui/: __init__.py  app.py  launch.py  prefs.py  viewmodel.py  worker.py
src/stalker_gamma_linux/gui/windows/: __init__.py  doctor_view.py  main_window.py  preferences.py  progress_view.py
src/stalker_gamma_linux/mo2/: __init__.py  diagnostics.py  errors.py  flat.py  ini.py  instance.py  launch.py  modlist.py  paths.py  session.py  winepath.py
src/stalker_gamma_linux/prefix/: __init__.py  doctor.py  download.py  errors.py  paths.py  process.py  proton.py  provision.py  verbs.py
tasks/: README.md  T01-spec-installation-manuelle.md  T02-squelette-et-detection-environnement.md  T03-wrapper-moteur-gamma-launcher.md  T04-prefixe-proton.md  T05-mo2-sous-proton.md  T06-integration-steam.md  T07-cli-orchestrateur.md  T08-gui-gtk4.md  T09-packaging.md  T10-ci-github-actions.md
tests/: conftest.py  test_checks.py  test_cli.py  test_commands.py  test_desktop_entry.py  test_desktop_install.py  test_desktop_paths.py  test_desktop_session.py  test_distro.py  test_doctor.py  test_engine_errors.py  test_engine_integration.py  test_engine_paths.py  test_engine_process.py  test_engine_runner.py  test_gui_prefs.py  test_gui_viewmodel.py  test_gui_worker.py  test_logging_setup.py  test_mo2_diagnostics.py  test_mo2_flat.py  test_mo2_ini.py  test_mo2_instance.py  test_mo2_launch.py  test_mo2_modlist.py  test_mo2_session.py  test_mo2_winepath.py  test_orchestrator.py  test_prefix_doctor.py  test_prefix_download.py  test_prefix_paths.py  test_prefix_process.py  test_prefix_proton.py  test_prefix_provision.py  test_prefix_verbs.py  test_report.py  test_state.py
