[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stalker-gamma-linux"
version = "0.1.0"
description = "Couche d'intégration Linux pour l'installation de S.T.A.L.K.E.R. G.A.M.M.A."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "gamma-launcher @ git+https://github.com/Mord3rca/gamma-launcher.git@v3.1",
]

[project.urls]
Homepage = "https://github.com/Grokitach/Stalker_GAMMA"

[project.scripts]
stalker-gamma-linux = "stalker_gamma_linux.cli:main"

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.11", "pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m \"not network\""
markers = [
    "network: exercises the real gamma-launcher binary and/or network access (excluded by default)",
]
