[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stalker-gamma-linux"
version = "0.1.0"
description = "Couche d'intégration Linux pour l'installation de S.T.A.L.K.E.R. G.A.M.M.A."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "gamma-launcher @ git+https://github.com/Mord3rca/gamma-launcher.git@v3.1",
    "rich>=13.0",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/Grokitach/Stalker_GAMMA"

[project.scripts]
stalker-gamma-linux = "stalker_gamma_linux.cli:main"
stalker-gamma-linux-gui = "stalker_gamma_linux.gui.launch:main"

[project.optional-dependencies]
# PyGObject n'a pas de roue manylinux (extension liée à GLib/GObject-introspection
# du système) : elle doit venir du paquet système de la distribution (voir
# `environment.checks.check_gtk_gui` pour les commandes par distribution), ou d'un
# venv créé avec `--system-site-packages`. La CLI ne dépend jamais de ce groupe.
gui = ["PyGObject>=3.50"]
dev = ["ruff>=0.6", "mypy>=1.11", "pytest>=8.0", "PyGObject-stubs>=2.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stalker_gamma_linux = ["assets/icon.png"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m \"not network\""
markers = [
    "network: exercises the real gamma-launcher binary and/or network access (excluded by default)",
]
